<resources>
    <string name="app_name">SKCK POLRES PRINGSEWU</string>
    <string-array name="array_kecamatan">
        <item>GADINGREJO</item>
        <item>PRINGSEWU</item>
        <item>AMBARAWA</item>
        <item>PARDASUKA</item>
        <item>SUKOHARJO</item>
        <item>BANYUMAS</item>
        <item>ADILUWIH</item>
        <item>PAGELARAN</item>
        <item>PAGELARAN UTARA</item>
    </string-array>

    <string-array name="array_kebutuhan">
        <item>TNI/POLRII</item>
        <item>BEKERJA</item>
        <item>MENIKAH</item>
        <item>LEGISLATIF</item>
        <item>CPNS</item>
        <item>APARAT PEKON</item>
        <item>CALON KAKON</item>
        <item>MELANJUTKAN PENDIDIKAN</item>
        <item>PINDAH ALAMAT</item>
        <item>PWI</item>
        <item>SATPAM</item>
        <item>BAZNAS</item>
        <item>KERJASAMA</item>
    </string-array>

    <string-array name="array_jenis_kelamin">
        <item>PRIA</item>
        <item>WANITA</item>
    </string-array>
    <string name="card1">Faisal</string>
    <string name="card2">NIK: 1234567</string>
    <string name="card3">Jenis Kelamin: Pria</string>
    <string name="card4">Status: Menikah</string>
    <string name="card5">Kecamatan: Gading Rejo</string>
    <string name="card6">Tanggal: 01&#8211;01&#8211;2022</string>
    <string name="card7">Delete</string>

    <!-- CARI -->
    <string name="cari1">-- / -- / ----</string>
    <string name="cari2">CEK</string>
    <string name="cari3">TO -></string>
    <string name="cari4">Jumlah data :</string>
    <string name="cari5">0</string>
    <string name="cari6">Grand Total :</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>


</resources>