<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_card"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linier1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="30sp"
                android:layout_weight="1"
                android:text="@string/card1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="30sp"
                android:layout_weight="1"
                android:text="@string/card2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linier1"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_jk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:text="@string/card3"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:text="@string/card4"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_kecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            android:layout_marginBottom="16dp"
            android:text="@string/card5"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.159" />

        <TextView
            android:id="@+id/txt_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            android:layout_marginBottom="12dp"
            android:text="@string/card6"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>